--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,11 @@ top:50px;
 }
 h2{
     font-family: 'Merriweather', serif;
-    
 }
+.infosys
+ {
+    padding: auto 20 auto 20 ;
+ }
 .skill{
     width: 50px;
     margin: 10px;
