--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,8 @@ h2{
 }
 .infosys
  {
-    padding: auto 20 auto 20 ;
+     margin-right: 20px;
+    margin-left: 20px;
  }
 .skill{
     width: 50px;
