--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ top:50px;
 h2{
     font-family: 'Merriweather', serif;
 }
+.profile{
+    margin-right: 20px;
+    margin-left: 20px;
+}
 .infosys
  {
      margin-right: 20px;
