--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
 body{
     margin: 0%;
-    /* background-color: #6E85B7 ; */
+    color: #40514E ;
     background-color: #CEE5D0;
     text-align: center;
     font-family: 'Merriweather', serif;
+    
 
+}
+p{
+    line-height: 200%;
 }
 h1{
     margin-top: 0px;
@@ -12,41 +16,33 @@ h1{
     text-align: center;  
     font-size: 90px;
    padding-top: 50px ;
-margin-bottom: 30px;
+ margin-bottom: 30px;
    color: #293462;
   font-family: 'Tangerine', cursive;
+ 
 }
+h2{
+    font-weight: normal;
+    font-family: 'Merriweather', serif;
+   color: #293462;
+}
+h3{
+   color: #293462;
 
+}
+.devansh-png{
+    width: 200px;
+    padding: 200px auto;
+    margin: 60px auto 20px auto;
+
+}
 
 .first-container{
     position: relative;
      padding-top: 100px ;
+     margin: 0 0 0 0;
     background-color: #94B49F;
     
-}
- 
-.top_cloud {
-    position:absolute;
- 
-   right:300px;
-top:50px;
-}
-
-.bottom_cloud{
-    position:absolute;
-    /* right: 50px; */
-    left:300px;
-    bottom:300px;
-
-}
-.pro{
-    color: #485f91;
-    text-align: center;
-    margin-top: 0%;
-    /* font-size: 2.5rem; */
-}
-h2{
-    font-family: 'Merriweather', serif;
 }
 .profile{
     margin-right: 20px;
@@ -54,16 +50,65 @@ h2{
 }
 .infosys
  {
-     margin-right: 20px;
+    margin-right: 20px;
     margin-left: 20px;
  }
+.top_cloud {
+    position:absolute;
+ 
+   right:300px;
+top:50px;
+}
+ 
+
+.skill-row{
+    /* display: inline-block; */
+    margin: 100px auto 100px auto;
+    width: 50%;
+    text-align: justify;
+    line-height: 2;
+   
+}
+.bottom_cloud{
+    position:absolute;
+    /* right: 50px; */
+    left:250px;
+    bottom:300px;
+ 
+}
+ 
+
+ 
+.pro{
+    /* color: #485f91; */
+   color: #293462;
+
+    text-align: center;
+    margin-top: 0%;
+    font-weight: normal;
+    /* font-size: 2.5rem; */
+}
+ .mountain{
+    width: 100%;
+    /* display: inline-block; */
+ }
+.computer{
+    width: 30%;
+    float: left;
+    margin-right: 2rem ;
+}
 .skill{
     width: 50px;
     margin: 10px;
+    
 
 }
 .namaste{
-    margin-top: 0%;
+    /* margin-top: 0%; */
+    font-family: 'Tangerine', cursive;
+    font-weight: 700;
+    font-size:  300%;
+    
 }
 .line{
     margin: 100px auto;
@@ -71,7 +116,8 @@ h2{
     border-style: dotted none none;
      width:10%;
      color: rgb(255, 255, 255);
-     border-top-width: 8px}
+     border-top-width: 8px;
+    }
     
 .footer-link{
     color: #11999E;
@@ -79,12 +125,39 @@ h2{
     text-decoration:none;
 }
 .contact-me{
-    margin-bottom: 20px;
-
+    margin: 100px;
+    line-height: 200%;
 }
-.bottom-container{
+ 
+    .bottom-container{
     /* margin: 20px; */
     padding: 20px ;
     background-color:#94B49F;
     /* margin: 50px 5px; */
 }
+.btn {
+    background: #94B49F;
+    background-image: -webkit-linear-gradient(top, #94B49F, #00781e);
+    background-image: -moz-linear-gradient(top, #94B49F, #00781e);
+    background-image: -ms-linear-gradient(top, #94B49F, #00781e);
+    background-image: -o-linear-gradient(top, #94B49F, #00781e);
+    background-image: linear-gradient(to bottom, #94B49F, #00781e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #25b353;
+    background-image: -webkit-linear-gradient(top, #25b353, #0e451f);
+    background-image: -moz-linear-gradient(top, #25b353, #0e451f);
+    background-image: -ms-linear-gradient(top, #25b353, #0e451f);
+    background-image: -o-linear-gradient(top, #25b353, #0e451f);
+    background-image: linear-gradient(to bottom, #25b353, #0e451f);
+    text-decoration: none;
+  }
